<resources>
    <string name="app_name">SecretSafe</string>
    <string name="action_settings">Settings</string>
    <string name="emailText">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="loginOptionMsg">Or say the secret word</string>
    <string name="registerMessage">Don\'t have an account yet? Get one in seconds!</string>
    <string name="RegisterHere">Register Here</string>
    <string name ="locker">Your Locker</string>

</resources>
